easytravel/manifests/easytravel-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easytravel-backend
  namespace: easytravel
spec:
  selector:
    matchLabels:
      app: easytravel-backend
      product: easytravel
  replicas: 1
  template:
    metadata:
      labels:
        app: easytravel-backend
        product: easytravel
      annotations:
        support.contact: "demoability@dynatrace.com"
        support.channel: "#team-demoability"
    spec:
      containers:
      - env:
        - name: CATALINA_OPTS
          value: -Dconfig.apmServerDefault=APM -Xmx300m -Djava.security.egd=file:/dev/./urandom
        - name: ET_DATABASE_LOCATION
          value: easytravel-mongodb:27017
        - name: ET_MONGO_AUTH_DB
          value: admin
        - name: ET_DATABASE_USER
          value: etAdmin
        - name: ET_DATABASE_PASSWORD
          value: adminadmin
        - name: ET_PLUGIN_SERVICE_LOCATION
          value: easytravel-pluginservice:8080
        - name: ET_BACKEND_URL
          value: http://easytravel-backend:8080
        image: dynatrace/easytravel-backend
        imagePullPolicy: "Always"
        name: easytravel-backend
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            memory: 512Mi
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /services/JourneyService/getLocations
            port: 8080
            scheme: HTTP
          periodSeconds: 60
          initialDelaySeconds: 240
          successThreshold: 1
          timeoutSeconds: 1  
      restartPolicy: Always
