easytravel/manifests/easytravel-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easytravel-frontend
  namespace: easytravel
spec:
  selector:
    matchLabels:
      app: easytravel-frontend
      product: easytravel
  replicas: 1
  template:
    metadata:
      labels:
        app: easytravel-frontend
        product: easytravel
      annotations:
        support.contact: "demoability@dynatrace.com"
        support.channel: "#team-demoability"
    spec:
      containers:
      - env:
        - name: CATALINA_OPTS
          value: -Dconfig.apmServerDefault=APM -Xmx525m -Djava.security.egd=file:/dev/./urandom
        - name: ET_BACKEND_URL
          value: http://easytravel-backend:8080
        image: dynatrace/easytravel-frontend:2.0.0.3273
        imagePullPolicy: "Always"
        name: easytravel-frontend
        ports:
        - containerPort: 8080
        resources: {}
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 60
          initialDelaySeconds: 240
          successThreshold: 1
          timeoutSeconds: 1
      restartPolicy: Always
