easytravel/manifests/easytravel-mongodb-deployment-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easytravel-mongodb
  namespace: easytravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easytravel-mongodb
      product: easytravel
  template:
    metadata:
      labels:
        app: easytravel-mongodb
        product: easytravel
      annotations:
        support.contact: "demoability@dynatrace.com"
        support.channel: "#team-demoability"
    spec:
      containers:
      - image: dynatrace/easytravel-mongodb
        imagePullPolicy: "Always"
        name: easytravel-mongodb
        ports:
        - containerPort: 27017
        - containerPort: 28017
        resources:
          limits:
            cpu: 300m
            memory: 150Mi
          requests:
            cpu: 200m
            memory: 110Mi
      restartPolicy: Always
