easytravel/manifests/easytravel-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: easytravel-mongodb
  name: easytravel-mongodb
  namespace: easytravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easytravel-mongodb
  template:
    metadata:
      labels:
        app: easytravel-mongodb
      annotations:
        support.contact: "demoability@dynatrace.com"
        support.channel: "#team-demoability"
    spec:
      containers:
      - image: dynatrace/easytravel-mongodb
        imagePullPolicy: "Always"
        name: easytravel-mongodb
        ports:
        - containerPort: 27017
        - containerPort: 28017
        resources: {}
      restartPolicy: Always
