easytravel/manifests/easytravel-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easytravel-www
  namespace: easytravel
spec:
  selector:
    matchLabels:
      app: easytravel-www
      product: easytravel
  replicas: 1
  template:
    metadata:
      labels:
        app: easytravel-www
        product: easytravel
      annotations:
        support.contact: "demoability@dynatrace.com"
        support.channel: "#team-demoability"
    spec:
      containers:
      - env:
        - name: ET_FRONTEND_LOCATION
          value: easytravel-frontend:8080
        - name: ET_BACKEND_LOCATION
          value: easytravel-backend:8080
        image: dynatrace/easytravel-nginx
        imagePullPolicy: "Always"
        name: easytravel-www
        ports:
        - containerPort: 80
        - containerPort: 8080
        resources: {}
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 60
          initialDelaySeconds: 240
          successThreshold: 1
          timeoutSeconds: 1
      restartPolicy: Always
