easytravel/manifests/easytravel-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easytravel-backend
  name: easytravel-backend
  namespace: easytravel
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: easytravel-backend
  type: ClusterIP
