easytravel/manifests/easytravel-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easytravel-frontend
  name: easytravel-frontend
  namespace: easytravel
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: easytravel-frontend
  type: ClusterIP
