easytravel/manifests/easytravel-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easytravel-mongodb
  name: easytravel-mongodb
  namespace: easytravel
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  - name: "28017"
    port: 28017
    targetPort: 28017
  selector:
    app: easytravel-mongodb
