easytravel/manifests/easytravel-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easytravel-www
  name: easytravel-www
  namespace: easytravel
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: easytravel-www
  type: LoadBalancer
